RepoLink: docsite assets updated

--- a/docsite/404.md
+++ b/docsite/404.md
@@ -5,14 +5,14 @@ layout: default
 
 # Page title
 # If omitted, the page will not be included in the navbar
-# title: 404
+title: 404
 
 # Specifies the order of the current page from the point of view of the navbar
 # Can have repetition in the numbers, for parent-child hierarchies
 # nav_order: 1
 
 # Let exclude the page from the navbar
-nav_exclude: false
+nav_exclude: true
 
 # If this page represents the parent page of a section that, therefore, has children, specify it in the following way
 has_children: false
