RepoLink version B: site assets updated

--- a/404.md
+++ b/404.md
@@ -1,40 +1,50 @@
 ---
-# Specifies the "filament" HTML page to be used. The HTML page must be located in the "_layouts" folder.
-# (should always be this)
+# Front matter of "classic" (404) page
+
+# Theme to use. Resides in the "_layouts" folder.
 layout: default
 
-# Page title
-# If omitted, the page will not be included in the navbar
+# Page title. If omitted, the page will not be included in the navbar.
 title: 404
 
-# Specifies the order of the current page from the point of view of the navbar
-# Can have repetition in the numbers, for parent-child hierarchies
-# nav_order: 1
+#################################################################
+
+# Specifies the order of the current page from the point of view of the navbar. Can have repetition in the numbers, for parent-child hierarchies.
+# # nav_order: 1
 
 # Let exclude the page from the navbar
 nav_exclude: true
 
-# If this page represents the parent page of a section that, therefore, has children, specify it in the following way
+# Let exclude the page from the built-in search engine
+search_exclude: true
+
+#################################################################
+
+# Set "true" if this page has childrens, "false" otherwise.
 has_children: false
 
-# If this page represents the child page of a section that, therefore, has ONE parent page, specify it in the following way
-# # parent: Namespace
-
-# If this page is a parent page, a Table Of Contents will be automatically generated containing all related child pages. Use the option below to disable this functionality.
-has_toc: false
-
-# If a child page has more children, add again
-# # has_children: true
-
-# To the children page(s) add
+# If this page is some page's child, specify the parent's name, otherwise comment out the option. If this page is some page's grandchild, specify grandparent's name, otherwise comment out the option.
 # # parent: NOME_PAGINA_GENITORE
 # # grand_parent: NOME_PAGINA_NONNO__GENITORE_DEL_GENITORE
 
-# Let exclude the page from the search engine (client-side)
-search_exclude: true
+# If this page is a parent page, a Table Of Contents will be automatically generated containing all related child pages. Use the option below to disable this functionality. Should always be set to "false".
+has_toc: false
+
+#################################################################
+
+# Specify the current language of this page. This value should match the value of "disambiguation_lang" set in the "Disambiguation Page" of the "Home Page (index.md or index.html)" of the site. Note: the 404 page can only be served in one language and cannot be dynamic since Jekyll philosophy is static!
+lang: it
+
+# Specify all other available languages in which this page is available. If there's no other language in addition to "lang", comment out this option.
+# # availableLanguages:
+# #   - 
 ---
 
 # 404: Not Found
 {: .no_toc }
 
-There's something wrong with the requested URL.
+There's something wrong with the requested URL. The requested resource could not be found within the domain.
+
+---
+
+<div id="compile_universal404_target"></div>
